<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?colorPrimary"
            app:title="@string/cognito_example_title"
            app:titleTextColor="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bCognitoLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/purple_500"
        android:text="@string/cognito_login"
        app:icon="@drawable/ic_cognito"
        app:iconPadding="16dp"
        app:iconSize="16dp"
        app:iconTint="@null" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bCognitoRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/purple_500"
        android:text="@string/cognito_register"
        app:icon="@drawable/ic_cognito"
        app:iconPadding="16dp"
        app:iconSize="16dp"
        app:iconTint="@null" />

</LinearLayout>
